--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommercetech?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:31480/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=XTkqmpjgHeCEuyZcMzdYGPiykxJBnvRr
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
