--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ server.error.include-binding-errors=never
 spring.servlet.multipart.max-file-size= 15MB
 spring.servlet.multipart.max-request-size= 30MB
 spring.web.resources.static-locations=classpath:/static/,classpath:/uploads/
+#file.upload-dir=src\\main\\resources\\static\\uploads\\
 
