--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,6 @@ spring.servlet.multipart.max-request-size= 30MB
 spring.web.resources.static-locations=classpath:/static/,classpath:/uploads/
 #file.upload-dir=src\\main\\resources\\static\\uploads\\
 
+firebase.bucket-name=project-fcfdd.appspot.com
+firebase.image-url=https://storage.googleapis.com/${firebase.bucket-name}/%s
 
