--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ server.error.include-binding-errors=never
 firebase.bucket-name=project-fcfdd.appspot.com
 firebase.image-url=https://storage.googleapis.com/${firebase.bucket-name}/%s
 
+server.connection-timeout=60000
+spring.mvc.async.request-timeout=60000
+
