--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ server.error.include-binding-errors=never
 firebase.bucket-name=project-fcfdd.appspot.com
 firebase.image-url=https://storage.googleapis.com/${firebase.bucket-name}/%s
 
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
 server.connection-timeout=60000
 spring.mvc.async.request-timeout=60000
 
