--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ firebase.image-url=https://storage.googleapis.com/${firebase.bucket-name}/%s
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-server.connection-timeout=60000
-spring.mvc.async.request-timeout=60000
+#server.connection-timeout=60000
+#spring.mvc.async.request-timeout=60000
 
