--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.servlet.multipart.max-request-size=20MB
 #server.connection-timeout=60000
 #spring.mvc.async.request-timeout=60000
 
+server.tomcat.max-threads=200
+server.tomcat.min-spare-threads=10
+server.tomcat.accept-count=100
+server.tomcat.connection-timeout=20000
+server.tomcat.max-connections=10000
+
