--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-src/main/resources/firebase.json
-src/main/resources/serviceAccountKey.json
+#src/main/resources/firebase.json
+#src/main/resources/serviceAccountKey.json
 
 ### STS ###
 .apt_generated
