--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=XTkqmpjgHeCEuyZcMzdYGPiykxJBnvRr
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
-
+server.port=${PORT:8080}
 
 server.error.whitelabel.enabled=false
 server.error.include-message=never
