--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:31480/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=XTkqmpjgHeCEuyZcMzdYGPiykxJBnvRr
@@ -6,11 +6,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
 server.port=${PORT:8080}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.error.whitelabel.enabled=false
 server.error.include-message=never
 server.error.include-binding-errors=never
-
 
 firebase.bucket-name=project-fcfdd.appspot.com
 firebase.image-url=https://storage.googleapis.com/${firebase.bucket-name}/%s
