--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 
 dependencies {
 	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'org.apache.poi:poi:5.2.3'
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
